[project]
name = "bad-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "langchain-mistralai>=0.2.10",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
